server file plus

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Discovery Dev App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/llh9/interg/issues"
   },
-  "homepage": "https://github.com/llh9/interg#readme"
+  "homepage": "https://github.com/llh9/interg#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
